--- a/app/src/main/res/layout/content_create_list.xml
+++ b/app/src/main/res/layout/content_create_list.xml
@@ -100,7 +100,7 @@
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="New Button"
+                android:text="Add Data"
                 android:id="@+id/addButton"
                 android:layout_column="1"
                 android:onClick="addList" />
