Added functionality to getLists button.

--- a/app/src/main/res/layout/content_create_list.xml
+++ b/app/src/main/res/layout/content_create_list.xml
@@ -116,7 +116,7 @@
                 android:text="View Lists"
                 android:id="@+id/viewButton"
                 android:layout_column="1"
-                android:onClick="onView" />
+                android:onClick="viewLists" />
         </TableRow>
     </TableLayout>
 
