--- a/app/src/main/res/layout/content_view_list.xml
+++ b/app/src/main/res/layout/content_view_list.xml
@@ -12,4 +12,12 @@
     tools:context="com.example.harrisonj2.shoppinglist.ViewListActivity"
     tools:showIn="@layout/activity_view_list">
 
+    <ListView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/shoppingListView"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:choiceMode="singleChoice" />
 </RelativeLayout>
