added onClick to open button

--- a/app/src/main/res/layout/list_rows.xml
+++ b/app/src/main/res/layout/list_rows.xml
@@ -33,7 +33,8 @@
         android:width="50dp"
         android:background="#AED581"
         android:layout_weight="0.34"
-        android:text="@string/open" />
+        android:text="@string/open"
+        android:onClick="viewOpenList" />
 
     <Button
         style="?android:attr/buttonStyleSmall"
