Made the item rows layout

--- a/app/src/main/res/layout/list_rows.xml
+++ b/app/src/main/res/layout/list_rows.xml
@@ -44,5 +44,7 @@
         android:background="#EF5350"
         android:layout_weight="0.34"
         android:text="@string/delete"
-        android:onClick="onDeleteList" />
+        android:onClick="onDeleteList"
+        android:width="50dp" />
+
 </LinearLayout>
