--- a/app/src/main/res/layout/list_rows.xml
+++ b/app/src/main/res/layout/list_rows.xml
@@ -9,42 +9,26 @@
         android:layout_height="wrap_content"
         android:text="Name"
         android:id="@+id/shoppingListNameText"
-        android:padding="10dp"/>
+        android:padding="10dp"
+        android:width="115dp"
+        android:maxWidth="115dp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="StoreName"
         android:id="@+id/storeNameText"
-        android:padding="10dp"/>
+        android:padding="10dp"
+        android:width="115dp"
+        android:maxWidth="115dp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Trip Date"
         android:id="@+id/tripDateText"
-        android:padding="10dp"/>
-
-    <Button
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="32dp"
-        android:layout_height="26dp"
-        android:id="@+id/openButton"
-        android:width="50dp"
-        android:background="#AED581"
-        android:layout_weight="0.34"
-        android:text="@string/open"
-        android:onClick="viewOpenList" />
-
-    <Button
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="32dp"
-        android:layout_height="26dp"
-        android:id="@+id/deleteButton"
-        android:background="#EF5350"
-        android:layout_weight="0.34"
-        android:text="@string/delete"
-        android:onClick="onDeleteList"
-        android:width="50dp" />
+        android:padding="10dp"
+        android:width="115dp"
+        android:maxWidth="115dp" />
 
 </LinearLayout>
