--- a/app/src/main/res/layout/content_item_select.xml
+++ b/app/src/main/res/layout/content_item_select.xml
@@ -48,7 +48,7 @@
                 android:id="@+id/deleteButton"
                 android:layout_column="0"
                 android:layout_margin="5dp"
-                android:onClick="deleteItem"
+                android:onClick="goodbyeItem"
                 android:width="150dp" />
 
             <Button
