--- a/app/src/main/res/layout/item_rows.xml
+++ b/app/src/main/res/layout/item_rows.xml
@@ -24,4 +24,10 @@
         android:id="@+id/itemCostText"
         android:padding="10dp"/>
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Purchased"
+        android:id="@+id/purchasedTextView" />
+
 </LinearLayout>
