--- a/app/src/main/res/layout/content_open_list.xml
+++ b/app/src/main/res/layout/content_open_list.xml
@@ -52,7 +52,8 @@
         android:height="50dp"
         android:layout_above="@+id/itemListView"
         android:layout_toRightOf="@+id/addItemButton"
-        android:layout_toEndOf="@+id/addItemButton" />
+        android:layout_toEndOf="@+id/addItemButton"
+        android:onClick="calculateCost" />
 
     <Button
         android:layout_width="wrap_content"
