--- a/app/src/main/res/layout/activity_view_list.xml
+++ b/app/src/main/res/layout/activity_view_list.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
+    android:background="@color/background"
     tools:context="com.example.harrisonj2.shoppinglist.ViewListActivity">
 
     <android.support.design.widget.AppBarLayout
