--- a/app/src/main/res/layout/content_add_item.xml
+++ b/app/src/main/res/layout/content_add_item.xml
@@ -6,9 +6,11 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:background="@color/background"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/activity_add_item"
     tools:context="com.example.harrisonj2.shoppinglist.AddItemActivity">
+
 
     <TextView
         android:layout_width="wrap_content"
@@ -16,6 +18,7 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/addItemTo"
         android:id="@+id/titleTextView"
+        android:textColor="@color/white"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
 
@@ -25,6 +28,7 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Medium Text"
         android:id="@+id/listNameTextView"
+        android:textColor="@color/white"
         android:layout_below="@+id/titleTextView"
         android:layout_centerHorizontal="true" />
 
@@ -46,6 +50,7 @@
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:text="Item Name"
                 android:id="@+id/addNameTextView"
+                android:textColor="@color/white"
                 android:layout_column="0"
                 android:width="125dp"
                 android:layout_margin="3dp" />
@@ -68,6 +73,7 @@
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:text="@string/quantity"
                 android:id="@+id/quantityTextView"
+                android:textColor="@color/white"
                 android:layout_column="0"
                 android:layout_margin="3dp"
                 android:width="125dp" />
@@ -90,6 +96,7 @@
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:text="Estimated Cost"
                 android:id="@+id/estCostTextView"
+                android:textColor="@color/white"
                 android:layout_column="0"
                 android:width="125dp"
                 android:layout_margin="3dp" />
