--- a/app/src/main/res/layout/content_create_list.xml
+++ b/app/src/main/res/layout/content_create_list.xml
@@ -6,6 +6,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:background="@color/background"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/activity_create_list" tools:context=".CreateListActivity">
 
@@ -15,6 +16,7 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/titleCreateList"
         android:id="@+id/titleTextView"
+        android:textColor="@color/white"
         android:layout_column="0"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
@@ -37,6 +39,7 @@
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:text="@string/listName"
                 android:id="@+id/nameTextView"
+                android:textColor="@color/white"
                 android:layout_column="0"
                 android:layout_margin="3dp"
                 android:width="125dp" />
@@ -59,6 +62,7 @@
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:text="@string/storeName"
                 android:id="@+id/storeNameTextView"
+                android:textColor="@color/white"
                 android:layout_column="0"
                 android:layout_margin="3dp"
                 android:width="125dp" />
@@ -81,6 +85,7 @@
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:text="@string/dateGoing"
                 android:id="@+id/dateTextView"
+                android:textColor="@color/white"
                 android:layout_column="0"
                 android:width="125dp"
                 android:layout_margin="3dp" />
