--- a/app/src/main/res/layout/content_item_select.xml
+++ b/app/src/main/res/layout/content_item_select.xml
@@ -6,6 +6,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:background="@color/background"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/activity_item_select"
     tools:context="com.example.harrisonj2.shoppinglist.ItemSelect">
@@ -16,6 +17,7 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Large Text"
         android:id="@+id/listNameTextView"
+        android:textColor="@color/white"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
 
@@ -25,6 +27,7 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Medium Text"
         android:id="@+id/itemNameTextView"
+        android:textColor="@color/white"
         android:layout_below="@+id/listNameTextView"
         android:layout_centerHorizontal="true" />
 
