--- a/app/src/main/res/layout/item_rows.xml
+++ b/app/src/main/res/layout/item_rows.xml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="match_parent"
+    android:background="@color/background"
     android:layout_height="match_parent">
+
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Name"
         android:id="@+id/itemNameText"
+        android:textColor="@color/white"
         android:padding="10dp"/>
 
     <TextView
@@ -15,6 +18,7 @@
         android:layout_height="wrap_content"
         android:text="Quantity"
         android:id="@+id/itemQuantityText"
+        android:textColor="@color/white"
         android:padding="10dp"/>
 
     <TextView
@@ -22,12 +26,14 @@
         android:layout_height="wrap_content"
         android:text="Cost"
         android:id="@+id/itemCostText"
+        android:textColor="@color/white"
         android:padding="10dp"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Purchased"
-        android:id="@+id/purchasedTextView" />
+        android:id="@+id/purchasedTextView"
+        android:textColor="@color/white"/>
 
 </LinearLayout>
