--- a/app/src/main/res/layout/content_open_list.xml
+++ b/app/src/main/res/layout/content_open_list.xml
@@ -13,7 +13,8 @@
     tools:context="com.example.harrisonj2.shoppinglist.openListActivity"
     tools:showIn="@layout/activity_open_list">
 
-    <Button
+    <ImageButton
+        android:src=""
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/addItem"
