--- a/app/src/main/res/layout/content_open_list.xml
+++ b/app/src/main/res/layout/content_open_list.xml
@@ -15,15 +15,15 @@
 
     <ImageButton
         android:src="@drawable/p_plus"
+        android:background="@color/background"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/addItem"
         android:id="@+id/addItemButton"
         android:onClick="goToAddItem"
-        android:layout_marginTop="25dp"
+        android:layout_marginEnd="29dp"
         android:layout_below="@+id/shoppingListNameTV"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_toStartOf="@+id/calculateCostButton" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -33,10 +33,11 @@
         android:id="@+id/shoppingListNameTV"
         android:textColor="@color/white"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="23dp" />
+        android:layout_toEndOf="@+id/costTextView" />
 
-    <Button
+    <ImageButton
+        android:src="@drawable/p_remove"
+        android:background="@color/background"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Calculate Cost"
@@ -47,16 +48,17 @@
         android:layout_above="@+id/costTextView"
         android:layout_centerHorizontal="true" />
 
-    <Button
+    <ImageButton
+        android:src="@drawable/p_trash"
+        android:background="@color/background"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="DELETE LIST"
         android:id="@+id/deleteListButton"
-        android:width="119dp"
-        android:height="50dp"
         android:onClick="deleteList"
         android:layout_alignTop="@+id/calculateCostButton"
-        android:layout_toEndOf="@+id/calculateCostButton" />
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="34dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -75,4 +77,31 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/costTextView" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Add Item"
+        android:id="@+id/addItemText"
+        android:textColor="#ffffff"
+        android:layout_below="@+id/addItemButton"
+        android:layout_alignStart="@+id/addItemButton" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Calculate Cost"
+        android:id="@+id/calculateCostText"
+        android:textColor="#ffffff"
+        android:layout_below="@+id/calculateCostButton"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Delete List"
+        android:id="@+id/deleteListText"
+        android:textColor="#ffffff"
+        android:layout_below="@+id/deleteListButton"
+        android:layout_alignStart="@+id/deleteListButton" />
 </RelativeLayout>
