Revert to no calendar and hint added to text box for date

--- a/app/src/main/res/layout/content_create_list.xml
+++ b/app/src/main/res/layout/content_create_list.xml
@@ -98,7 +98,9 @@
                 android:id="@+id/dateEditText"
                 android:textColor="@color/white"
                 android:layout_column="1"
-                android:width="200dp" />
+                android:width="200dp"
+                android:hint="YYYY/MM/DD"
+                android:textColorHint="#ece9e9" />
         </TableRow>
 
         <TableRow
